[package]
name = "nightingale"
version = "0.1.0"
authors = ["Zak Henry <zak@cloudnc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[dependencies]
hyper = "0.13.0-alpha.3"

tonic = "0.1.0-alpha.1"
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"

tokio = "=0.2.0-alpha.6"
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["alloc", "async-await"]}
futures-util-preview = "=0.3.0-alpha.19"
async-stream = "0.1.2"
http = "0.1"
tower = "=0.3.0-alpha.2"


[build-dependencies]
tonic-build = "0.1.0-alpha.1"
