[package]
name = "nightingale"
version = "0.1.0"
authors = ["Zak Henry <zak.henry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", default-features = false }

tonic = "0.1.0-alpha.5"
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"

tokio = "=1.8.4"
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["alloc", "async-await"]}
futures-util-preview = "=0.3.0-alpha.19"
async-stream = "0.1.2"
http = "0.1"
tower = "=0.3.0-alpha.2"


[build-dependencies]
tonic-build = "0.1.0-alpha.5"
